monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4025/A4025_sub_f.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4025;

grammar A4025_sub_f extends de.monticore.grammar.cocos.invalid.A4025.A4025_super_f {

 B;

 A = c:B;

}
